se realizan correcciones a htmls y elementos de bootstrap

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="Home Green Bar el mejor contenido para el fan de Aston Martin f1 team"
-        content="width=device-width, initial-scale=1.0">
-    <meta name="Home Green Bar el mejor contenido para el fan de Aston Martin f1 team"
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
+        F1,Circuitos de F1,Aston Martin,Noticias de Fórmula 1,Tabla de constructores>
+    <meta name="description"
         content="Explora el mundo de la Fórmula 1 con un enfoque en el equipo Aston Martin F1. Descubre las últimas noticias, análisis y detalles exclusivos sobre el rendimiento y la estrategia de este icónico equipo en la máxima competición automovilística.">
 
     <link rel="shortcut icon" href="img/GP2320_113814_U1A1636 (1).webp" type="image/x-icon">
@@ -34,7 +35,6 @@
         <div class="nav">
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
-
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -68,13 +68,13 @@
         <div class="encabezadosDeseccion">
             <h1>¿Quienes Somos?</h1>
             <div class="ultimoGpdisputado">
-                <img src="./img/astonmartinhorizontal1webp.png"
+                <img src="./img/Astonmartinvistaapaisada.webp"
                     alt="Fernando Alonso batallando por posicion en carrera sprint de brazil en vuelta 14">
             </div>
         </div>
 
         <div class="encabezadosDeseccion">
-            <h2><strong>Green Bar</strong></h2>
+            <h2>Green Bar</h2>
         </div>
         <div class="textoDelmain">
             <p>Somos The Green Bar, una apasionada comunidad de amantes de la Fórmula Uno, en especial del equipo Aston
@@ -111,20 +111,18 @@
         </div>
 
         <div class="imagenDelmain">
-            <img src="./img/352119536_1144914303567158_4485285263322083808_n.jpg"
-                alt="Fernando Alonso entrando en los pits en clasificación">
+            <img src="./img/Aston Martin En pits.jpg" alt="Fernando Alonso entrando en los pits en clasificación">
         </div>
         <div class="imagenDelmain2">
-            <img src="./img/339680742_876210170133876_4104793023013670619_n.jpg"
+            <img src="./img/Aston martin en practicas y testeo de neumaticos curva 1 barcelona.jpg"
                 alt="Aston martin en practicas y testeo de neumaticos curva 1 barcelona">
         </div>
         <div class="imagenDelmain3">
-            <img src="./img/386262754_264166619940662_2609310702596619209_n.jpg"
+            <img src="./img/Jornada de entrenamientos en austin texas en un  atardecer.jpg"
                 alt="Jornada de entrenamientos en austin texas en un  atardecer ">
         </div>
         <div class="imagenDelmain4">
-            <img src="./img/348862866_641098644146075_4542889665858252651_n 2.jpg"
-                alt="Jornada de entrenamientos en monaco ">
+            <img src="./img/Jornada de entrenamientos en monaco .jpg" alt="Jornada de entrenamientos en monaco ">
         </div>
 
         </p>
@@ -133,7 +131,7 @@
 
 
         <div class="encabezadosDeseccion">
-            <h3><strong>Highlights de la temporada 2023</strong></h3>
+            <h3>Highlights de la temporada 2023</h3>
         </div>
         <div id="carouselExampleCaptions" class="carousel slide">
 
@@ -153,7 +151,7 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./img/Fernando_copy.jpeg" class="d-block w-100"
+                    <img src="./img/Fernando Alonso en prácticas libres 1.jpeg" class="d-block w-100"
                         alt="Fernando Alonso en prácticas libres 1">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Entrenamientos libres</h5>
@@ -162,15 +160,15 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img src="./img/Equipo_copy.jpeg" class="d-block w-100"
-                        alt="Equipo de Aston Martin viendo la carrera a través de los monitores">
+                    <img src="./img/Equipo de Aston Martin viendo la carrera a través de los monitores.jpeg"
+                        class="d-block w-100" alt="Equipo de Aston Martin viendo la carrera a través de los monitores">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>La gran batalla en brasil</h5>
                     </div>
                 </div>
 
                 <div class="carousel-item">
-                    <img src="./img/Lance_copy.jpeg" class="d-block w-100"
+                    <img src="./img/Lance y Fernando en la pretemporada del año 2023jpeg.jpeg" class="d-block w-100"
                         alt="Lance y Fernando en la pretemporada del año 2023">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Revisando las telemetrías</h5>
@@ -179,7 +177,8 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img src="./img/publico_copy.jpeg" class="d-block w-100"
+                    <img src="./img/Fanaticada del equipo Aston Martin saludando desde el paddock del premio de Barcelona.jpeg"
+                        class="d-block w-100"
                         alt="Fanaticada del equipo Aston Martin saludando desde el paddock del premio de Barcelona">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>la Green bar presente</h5>
