--- a/pages/gpDeabudhabi.html
+++ b/pages/gpDeabudhabi.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Green bar Grand prix, resumen de las mejores carreras y sus tiempos"
+    <meta name="keywords" content="" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
+        F1,Circuitos de F1,Aston Martin,Noticias de Fórmula 1,Tabla de constructores>
+    <meta name="description"
         content="Explora el mundo de la Fórmula 1 con un enfoque en el equipo Aston Martin F1. Descubre las últimas noticias, análisis y detalles exclusivos sobre el rendimiento y la estrategia de este icónico equipo en la máxima competición automovilística.">
     <meta name="keywords" content="" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
         F1,Circuitos de F1,Aston Martin,Noticias de Fórmula 1,Tabla de constructores>
@@ -79,7 +81,7 @@
                 alt="Fernando Alonso entrando a su monoplaza previo a la jornada de clasificación">
         </div>
         <div class="encabezadosDeseccion">
-            <h2><strong>Una temporada increíble</strong></h2>
+            <h2>Una temporada increíble</h2>
         </div>
         <div class="imagenDelgp">
             <img src="../img/previo-a-la-salida.png" alt="aston martin entrando en los pits en clasificación">
