--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Green bar noticias los mejores reportajes y actualidad del equipo"
+    <meta name="keywords" content="" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
+        F1,Circuitos de F1,Aston Martin,Noticias de Fórmula 1,Tabla de constructores>
+    <meta name="description"
         content="Explora el mundo de la Fórmula 1 con un enfoque en el equipo Aston Martin F1. Descubre las últimas noticias, análisis y detalles exclusivos sobre el rendimiento y la estrategia de este icónico equipo en la máxima competición automovilística.">
     <link rel="shortcut icon" href="img/GP2320_113814_U1A1636 (1).webp" type="image/x-icon">
     <meta name="keywords" content="" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
@@ -42,17 +44,17 @@
                                 <a class="nav-link" href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../pages/gpDeabudhabi.html">Gp de abudhabi</a>
+                                <a class="nav-link" href="gpDeabudhabi.html">Gp de abudhabi</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../pages/blog.html">Blog</a>
+                                <a class="nav-link" href="blog.html">Blog</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page"
-                                    href="../pages/noticias.html">Noticias</a>
+                                    href="noticias.html">Noticias</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                                <a class="nav-link" href="contacto.html">Contacto</a>
                             </li>
 
                         </ul>
