--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
-        F1,Circuitos de F1,Aston Martin,Noticias de Fórmula 1,Tabla de constructores>
+    <meta name="keywords" content=" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
+    F1,Circuitos de F1,Aston Martin,Noticias de Fórmula 1,Tabla de constructores">
     <meta name="description"
         content="Explora el mundo de la Fórmula 1 con un enfoque en el equipo Aston Martin F1. Descubre las últimas noticias, análisis y detalles exclusivos sobre el rendimiento y la estrategia de este icónico equipo en la máxima competición automovilística.">
-    <meta name="keywords" content="" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
-        F1,Circuitos de F1,Aston Martin,Noticias de Fórmula 1,Tabla de constructores>
+    
     <link rel="shortcut icon" href="img/GP2320_113814_U1A1636 (1).webp" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -44,16 +43,16 @@
                                 <a class="nav-link" href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../pages/gpDeabudhabi.html">Gp de abudhabi</a>
+                                <a class="nav-link" href="gpDeabudhabi.html">Gp de abudhabi</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../pages/blog.html">Blog</a>
+                                <a class="nav-link active" aria-current="page" href="blog.html">Blog</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../pages/noticias.html">Noticias</a>
+                                <a class="nav-link" href="noticias.html">Noticias</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                                <a class="nav-link" href="contacto.html">Contacto</a>
                             </li>
 
                         </ul>
@@ -80,7 +79,7 @@
 
 
                     <h5>Alonso: "2023 fue mi mejor año en F1 junto con 2012"</h5>
-                    <img src="../img/4.png" alt="aston martin entrando a pit">
+                    <img src="../img/aston martin entrando a pit.png" alt="aston martin entrando a pit">
                     <div class="parrafoBlog1">
                         <p>Fernando Alonso cree que su temporada 2023 con Aston Martin fue su mejor año en la Fórmula 1,
                             junto con la de 2012 en Ferrari, cuando perdió el campeonato en el final con Sebastian
@@ -96,7 +95,7 @@
                 <article class="tarjeta">
 
                     <h5>Aston Martin F1 niega una posible salida de Lawrence Stroll</h5>
-                    <img src="../img/5.png" alt="aston martin ganando posicion">
+                    <img src="../img/aston martin ganando posicion.png" alt="aston martin ganando posicion">
                     <div class="parrafoBlog2">
                         <p>El director general del equipo Aston Martin de Fórmula 1, Jeff Slack, afirma que la nueva
                             inversión externa anunciada la semana pasada no supone el inicio de una eventual salida del
@@ -112,7 +111,7 @@
 
                 <article class="tarjeta">
                     <h5>Aston Martin F1 vende una parte con una valuación de más de mil millones</h5>
-                    <img src="../img/6.png" alt="aston martin perfecta estrategia mojado">
+                    <img src="../img/aston martin perfecta estrategia mojado.png" alt="aston martin perfecta estrategia mojado">
                     <div class="parrafoBlog3">
                         <p>La escudería Aston Martin de Fórmula 1 ha vendido una participación de su compañía a la
                             empresa
