--- a/pages/gpDeabudhabi.html
+++ b/pages/gpDeabudhabi.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
-        F1,Circuitos de F1,Aston Martin,Noticias de Fórmula 1,Tabla de constructores>
+    <meta name="keywords" content=" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
+        F1,Circuitos de F1,Aston Martin,Noticias de Fórmula 1,Tabla de constructores">
     <meta name="description"
         content="Explora el mundo de la Fórmula 1 con un enfoque en el equipo Aston Martin F1. Descubre las últimas noticias, análisis y detalles exclusivos sobre el rendimiento y la estrategia de este icónico equipo en la máxima competición automovilística.">
-    <meta name="keywords" content="" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
-        F1,Circuitos de F1,Aston Martin,Noticias de Fórmula 1,Tabla de constructores>
+
 
     <link rel="shortcut icon" href="img/GP2320_113814_U1A1636 (1).webp" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -50,17 +49,17 @@
                                 <a class="nav-link" href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../pages/gpDeabudhabi.html">Gp de
+                                <a class="nav-link active" aria-current="page" href="gpDeabudhabi.html">Gp de
                                     abudhabi</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../pages/blog.html">Blog</a>
+                                <a class="nav-link" href="blog.html">Blog</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../pages/noticias.html">Noticias</a>
+                                <a class="nav-link" href="noticias.html">Noticias</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                                <a class="nav-link" href="contacto.html">Contacto</a>
                             </li>
 
                         </ul>
