--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
-        F1,Circuitos de F1,Aston Martin,Noticias de Fórmula 1,Tabla de constructores>
+    
     <meta name="description"
         content="Explora el mundo de la Fórmula 1 con un enfoque en el equipo Aston Martin F1. Descubre las últimas noticias, análisis y detalles exclusivos sobre el rendimiento y la estrategia de este icónico equipo en la máxima competición automovilística.">
     <link rel="shortcut icon" href="img/GP2320_113814_U1A1636 (1).webp" type="image/x-icon">
-    <meta name="keywords" content="" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
-        F1,Circuitos de F1,Aston Martin,Noticias de Fórmula 1,Tabla de constructores>
+    <meta name="keywords" content=" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
+        F1,Circuitos de F1,Aston Martin,Noticias de Fórmula 1,Tabla de constructores">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -68,7 +67,7 @@
             <h2>GreenBar Noticias</h2>
         </div>
         <div class="portadaDenoticias">
-            <img src="../img/9.jpeg"
+            <img src="../img/Equipo de fans que se encontraron en silverstone para recibir un tour por toda la fabrica.jpeg"
                 alt="Equipo de fans que se encontraron en silverstone para recibir un tour por toda la fabrica">
         </div>
         <div class="encabezadosDeseccion">
