se realizaron cambios post entrega

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -8,7 +8,7 @@
     F1,Circuitos de F1,Aston Martin,Noticias de Fórmula 1,Tabla de constructores">
     <meta name="description"
         content="Explora el mundo de la Fórmula 1 con un enfoque en el equipo Aston Martin F1. Descubre las últimas noticias, análisis y detalles exclusivos sobre el rendimiento y la estrategia de este icónico equipo en la máxima competición automovilística.">
-    
+
     <link rel="shortcut icon" href="img/GP2320_113814_U1A1636 (1).webp" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -71,7 +71,7 @@
                 alt="fernando alonso celebra con su equipo en el podio del gran premio de brazil">
         </div>
         <div class="encabezadosDeseccion">
-            <h2><strong>Entradas de blog</strong></h2>
+            <h2>Entradas de blog</h2>
         </div>
         <div class="articulosDeblog">
             <div class="boxblog1">
@@ -111,7 +111,8 @@
 
                 <article class="tarjeta">
                     <h5>Aston Martin F1 vende una parte con una valuación de más de mil millones</h5>
-                    <img src="../img/aston martin perfecta estrategia mojado.png" alt="aston martin perfecta estrategia mojado">
+                    <img src="../img/aston martin perfecta estrategia mojado.png"
+                        alt="aston martin perfecta estrategia mojado">
                     <div class="parrafoBlog3">
                         <p>La escudería Aston Martin de Fórmula 1 ha vendido una participación de su compañía a la
                             empresa
@@ -154,15 +155,14 @@
             <ul>
                 <li>
                     <a href="www.instagram.com" target="_blank" alt="icono de instagram">instagram<img
-                            src="../img/instagram.png" a href="www.instagram.com" target="_blank">
+                            src="../img/instagram.png">
                     </a>
                 <li>
                     <a href="www.facebook.com" target="_blank" alt="icono de facebook">facebook<img
-                            src="../img/facebook.png" a href="www.facebook.com" target="_blank">
+                            src="../img/facebook.png">
                 </li>
                 <li>
-                    <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="../img/gorjeo.png" a
-                            href="www.x.com" target="_blank">
+                    <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="../img/gorjeo.png">
                 </li>
                 <li>
                     <h4>Dirección</h4>
