--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -71,7 +71,7 @@
                 alt="Equipo de fans que se encontraron en silverstone para recibir un tour por toda la fabrica">
         </div>
         <div class="encabezadosDeseccion">
-            <h2><strong>Actualizaciones del equipo</strong></h2>
+            <h2>Actualizaciones del equipo</h2>
         </div>
         <div class="noticias">
             <div class="box">
@@ -82,7 +82,7 @@
 
 
 
-                    <img src="../img/6.png" alt="Jornada de entrenamientos 1">
+                    <img src="../img/Fernando alonso, entrega la botella al equipo en el podio.jpeg" alt="Fernando alonso, entrega la botella al equipo en el podio">
 
                     <p>Fernando Alonso cree que su equipo Aston Martin de Fórmula 1 se enfrenta a un "periodo
                         complicado" en su intento de dar el siguiente paso para convertirse en un aspirante regular a
@@ -96,7 +96,7 @@
                     <h5>Stroll explica por qué sufrió durante la F1 2023 con Aston Martin</h5>
 
 
-                    <img src="../img/5.png" alt="Jornada de entrenamientos 2">
+                    <img src="../img/Mike krack hablando a la prensa .png" alt="Mike krack hablando a la prensa">
 
                     <p>
                         Lance Stroll dice que no podía permitirse dudar de sí mismo a pesar de una difícil temporada
@@ -112,7 +112,7 @@
                     <h5>Mercedes y Aston Martin, por puertas separadas en el túnel de viento</h5>
 
 
-                    <img src="../img/1.png" alt="Clasificación buenos resultados">
+                    <img src="../img/aston martin entrando a pit.png" alt="aston martin entrando a pit">
 
                     <p>
                         Mercedes hizo que la escudería Aston Martin de Fórmula 1 utilizara puertas distintas para
@@ -128,7 +128,7 @@
 
 
 
-                    <img src="../img/2.png" alt="Jornada de entrenamientos 1">
+                    <img src="../img/aston martin perfecta estrategia mojado.png" alt="aston martin perfecta estrategia mojado">
 
                     <p>El director de rendimiento de Aston Martin en la Fórmula 1, Tom McCullough, cree que la temporada
                         2024 podría ser "fantástica para el deporte" a medida que la parrilla se converja.
@@ -141,7 +141,7 @@
                     <h5>Aston apunta a copiar el DRS de Red Bull y explica las dificultades</h5>
 
 
-                    <img src="../img/3.png" alt="Jornada de entrenamientos 2">
+                    <img src="../img/Jornada de entrenamientos.png" alt="Jornada de entrenamientos 2">
 
                     <p>
 
@@ -157,7 +157,7 @@
                     <h5>Alonso: Aston Martin F1 merecía una victoria este año más que nadie</h5>
 
 
-                    <img src="../img/4.png" alt="Clasificación buenos resultados">
+                    <img src="../img/Clasificación buenos resultados.webp" alt="Clasificación buenos resultados">
 
                     <p>Fernando Alonso dice que el creciente calendario de la Fórmula 1 y la inclusión de tripletes de
                         competencia le empujarán más cerca de dejar la serie antes de que tenga dudas sobre su capacidad
@@ -192,15 +192,14 @@
             <ul>
                 <li>
                     <a href="www.instagram.com" target="_blank" alt="icono de instagram">instagram<img
-                            src="../img/instagram.png" a href="www.instagram.com" target="_blank">
+                            src="../img/instagram.png">
                     </a>
                 <li>
                     <a href="www.facebook.com" target="_blank" alt="icono de facebook">facebook<img
-                            src="../img/facebook.png" a href="www.facebook.com" target="_blank">
+                            src="../img/facebook.png">
                 </li>
                 <li>
-                    <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="../img/gorjeo.png" a
-                            href="www.x.com" target="_blank">
+                    <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="../img/gorjeo.png">
                 </li>
                 <li>
                     <h4>Dirección</h4>
