--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="encabezadosDeseccion">
             <h1>¿Quienes Somos?</h1>
             <div class="ultimoGpdisputado">
-                <img src="./img/Astonmartinvistaapaisada.webp"
+                <img src="./img/astonmartinhorizontal1webp.png"
                     alt="Fernando Alonso batallando por posicion en carrera sprint de brazil en vuelta 14">
             </div>
         </div>
@@ -237,15 +237,14 @@
             <ul>
                 <li>
                     <a href="www.instagram.com" target="_blank" alt="icono de instagram">instagram<img
-                            src="./img/instagram.png" a href="www.instagram.com" target="_blank">
+                            src="./img/instagram.png">
                     </a>
                 <li>
                     <a href="www.facebook.com" target="_blank" alt="icono de facebook">facebook<img
-                            src="./img/facebook.png" a href="www.facebook.com" target="_blank">
+                            src="./img/facebook.png">
                 </li>
                 <li>
-                    <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="./img/gorjeo.png" a
-                            href="www.x.com" target="_blank">
+                    <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="./img/gorjeo.png">
                 </li>
 
                 <div class="direccion">
