--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,7 @@
 
   <meta name="description"
     content="Explora el mundo de la Fórmula 1 con un enfoque en el equipo Aston Martin F1. Descubre las últimas noticias, análisis y detalles exclusivos sobre el rendimiento y la estrategia de este icónico equipo en la máxima competición automovilística.">
-    <meta name="keywords" content=" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
+  <meta name="keywords" content=" Gran Premio, Carrera de F1, Equipo de Fórmula 1, Pilotos Aston Martin,Temporada de
     F1,Circuitos de F1,Aston Martin,Noticias de Fórmula 1,Tabla de constructores">
   <link rel="shortcut icon" href="img/GP2320_113814_U1A1636 (1).webp" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -75,8 +75,8 @@
           <form>
 
             <div class="labelsDeformulario">
-              <label for="novedades">Deseo recibir novedades <input type="checkbox" name="" id="novedades"> </label>
-
+              <label for="novedades">Deseo recibir novedades <input type="checkbox" id="novedades" name="novedades"></label>
+              
             </div>
 
             <div class="labelsDeformulario">
@@ -84,23 +84,21 @@
               <input type="text" id="nombre" name="nombre" required>
             </div>
 
-            <div class=" labelsDeformulario">
+            <div class="labelsDeformulario">
               <label for="correo">Correo electrónico:</label>
               <input type="email" id="correo" name="correo" required>
             </div>
 
-            <div class=" labelsDeformulario">
+            <div class="labelsDeformulario">
               <label for="telefono">Teléfono:</label>
               <input type="tel" id="telefono" name="telefono">
             </div>
-            <div class=" labelsDeformulario">
+
+            <div class="labelsDeformulario">
               <button type="submit">Suscribirse</button>
             </div>
 
-          </form>
         </div>
-
-      </div>
 
 
     </section>
@@ -143,16 +141,13 @@
     <div class="listaPie2">
       <ul>
         <li>
-          <a href="www.instagram.com" target="_blank" alt="icono de instagram">instagram<img src="../img/instagram.png"
-              a href="www.instagram.com" target="_blank">
+          <a href="www.instagram.com" target="_blank" alt="icono de instagram">instagram<img src="../img/instagram.png">
           </a>
         <li>
-          <a href="www.facebook.com" target="_blank" alt="icono de facebook">facebook<img src="../img/facebook.png" a
-              href="www.facebook.com" target="_blank">
+          <a href="www.facebook.com" target="_blank" alt="icono de facebook">facebook<img src="../img/facebook.png">
         </li>
         <li>
-          <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="../img/gorjeo.png" a
-              href="www.x.com" target="_blank">
+          <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="../img/gorjeo.png">
         </li>
         <li>
           <h4>Dirección</h4>
