--- a/pages/gpDeabudhabi.html
+++ b/pages/gpDeabudhabi.html
@@ -345,15 +345,14 @@
             <ul>
                 <li>
                     <a href="www.instagram.com" target="_blank" alt="icono de instagram">instagram<img
-                            src="../img/instagram.png" a href="www.instagram.com" target="_blank">
+                            src="../img/instagram.png">
                     </a>
                 <li>
                     <a href="www.facebook.com" target="_blank" alt="icono de facebook">facebook<img
-                            src="../img/facebook.png" a href="www.facebook.com" target="_blank">
+                            src="../img/facebook.png" >
                 </li>
                 <li>
-                    <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="../img/gorjeo.png" a
-                            href="www.x.com" target="_blank">
+                    <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="../img/gorjeo.png">
                 </li>
                 <li>
                     <h4>Dirección</h4>
