Correccion de errores en el carrusel
imagen no se mostraba correctamente por error en la ruta.

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./img/Fernando Alonso en prácticas libres 1.jpeg" class="d-block w-100"
+                    <img src="./img/Fernando Alonso en prácticas libres .jpeg" class="d-block w-100"
                         alt="Fernando Alonso en prácticas libres 1">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Entrenamientos libres</h5>
@@ -241,10 +241,10 @@
                     </a>
                 <li>
                     <a href="www.facebook.com" target="_blank" alt="icono de facebook">facebook<img
-                            src="./img/facebook.png">
+                            src="./img/facebook.png"> </a>
                 </li>
                 <li>
-                    <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="./img/gorjeo.png">
+                    <a href="www.x.com" target="_blank" alt="icono de X o twitter">X<img src="./img/gorjeo.png"> </a>
                 </li>
 
                 <div class="direccion">
